--- a/src/datasets/reddit/preprocess_data.ipynb
+++ b/src/datasets/reddit/preprocess_data.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "subreddit_info = pd.read_csv(save_path + \"subreddit_info.csv\")"
@@ -178,10 +178,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "subreddit_info_clean = subreddit_info.dropna(axis=0, how=\"any\")"
+    "subreddit_info_clean = subreddit_info.dropna(axis=0, how=\"any\")\n",
+    "print(subreddit_info.shape[0] - subreddit_info_clean.shape[0])"
    ],
    "metadata": {
     "collapsed": false,
@@ -192,21 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\TS\\Anaconda3\\envs\\DS1-RecommendationSystems\\lib\\site-packages\\pandas\\core\\generic.py:5494: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self[name] = value\n"
-     ]
-    }
-   ],
+   "execution_count": 4,
+   "outputs": [],
    "source": [
     "subreddit_info_clean.over18 = subreddit_info_clean.over18.astype('bool')"
    ],
@@ -219,10 +215,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "outputs": [],
    "source": [
-    "subreddit_info_clean.to_csv(save_path + \"subreddit_info_clean.csv\", index=False)"
+    "subreddit_info_clean.to_csv(save_path + \"subreddit_info.csv\", index=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -244,9 +240,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "subreddit_info.over18.dtype"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
