--- a/src/datasets/reddit/preprocess_data.ipynb
+++ b/src/datasets/reddit/preprocess_data.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
     "import pandas as pd\n",
     "import sqlite3 as sql\n",
     "\n",
-    "save_path = \"C:/Users/TS/PycharmProjects/DS1-RecommendationSystems/data/reddit/\""
+    "save_path = \"C:/Users\\TS/PycharmProjects/DS1-RecommendationSystems/src/data/reddit/\""
    ]
   },
   {
@@ -164,10 +164,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "outputs": [],
    "source": [
-    "subreddit_info = pd.read_csv(save_path + \"subreddit_info.csv\")"
+    "subreddit_info = pd.read_csv(save_path + \"subreddit_info.csv\")\n",
+    "subreddit_info = subreddit_info[['subreddit', 'num_subscribers', 'over18', 'public_description']]"
    ],
    "metadata": {
     "collapsed": false,
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "subreddit_info_clean.over18 = subreddit_info_clean.over18.astype('bool')"
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "subreddit_info_clean.to_csv(save_path + \"subreddit_info.csv\", index=False)"
@@ -229,18 +230,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "dtype('bool')"
+      "text/plain": "           subreddit  num_subscribers  over18  \\\n0    ChoosingBeggars        2134849.0   False   \n1             Python         809272.0   False   \n2  interestingasfuck        8092462.0   False   \n3     PublicFreakout        3257059.0   False   \n4   ShitMomGroupsSay         258681.0   False   \n\n                                  public_description  \n0  This subreddit is for posting screenshots, pic...  \n1  News about the programming language Python. If...  \n2             For anything that is InterestingAsFuck  \n3  A subreddit dedicated to people freaking out, ...  \n4  Share the drama. \\n\\nEssential oils cure all? ...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>subreddit</th>\n      <th>num_subscribers</th>\n      <th>over18</th>\n      <th>public_description</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ChoosingBeggars</td>\n      <td>2134849.0</td>\n      <td>False</td>\n      <td>This subreddit is for posting screenshots, pic...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Python</td>\n      <td>809272.0</td>\n      <td>False</td>\n      <td>News about the programming language Python. If...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>interestingasfuck</td>\n      <td>8092462.0</td>\n      <td>False</td>\n      <td>For anything that is InterestingAsFuck</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>PublicFreakout</td>\n      <td>3257059.0</td>\n      <td>False</td>\n      <td>A subreddit dedicated to people freaking out, ...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ShitMomGroupsSay</td>\n      <td>258681.0</td>\n      <td>False</td>\n      <td>Share the drama. \\n\\nEssential oils cure all? ...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [],
+   "source": [
+    "subreddit_info_clean.head()\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
