--- a/src/algorithm/als/evaluation_graphics.ipynb
+++ b/src/algorithm/als/evaluation_graphics.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "This notebook creates some plot from the results of the grid search."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "outputs": [],
@@ -8,11 +20,12 @@
     "import pandas as pd\n",
     "from implicit.als import AlternatingLeastSquares\n",
     "\n",
-    "from dataset import Dataset\n",
-    "from model_selection import GridSearchCV\n",
-    "from model_wrapper import ModelWrapper\n",
+    "from src.algorithm.als.sparsedataset import SparseDataset\n",
+    "from src.algorithm.als.model_selection import GridSearchCV\n",
+    "from src.algorithm.als.model_wrapper import ImplicitModelWrapper\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.rcParams['figure.facecolor'] = 'white'"
    ],
    "metadata": {
@@ -50,7 +63,7 @@
     "metric = \"map\"\n",
     "parameter = \"factors\"\n",
     "\n",
-    "df = raw_df[(raw_df.regularization==0.01) & (raw_df.iterations==10) & (raw_df.alpha==1)]\n",
+    "df = raw_df[(raw_df.regularization == 0.01) & (raw_df.iterations == 10) & (raw_df.alpha == 1)]\n",
     "for i, k in enumerate(df[parameter]):\n",
     "    plt.scatter([k] * 5, df[[f'Fold {i}' for i in range(5)]].iloc[i])\n",
     "\n",
@@ -86,7 +99,7 @@
     "metric = \"map\"\n",
     "parameter = \"alpha\"\n",
     "# df = pd.DataFrame(grid.get_result(show=False, filter_metric=metric))\n",
-    "df = raw_df[(raw_df.regularization==0.001) & (raw_df.iterations==100) & (raw_df.factors==64)]\n",
+    "df = raw_df[(raw_df.regularization == 0.001) & (raw_df.iterations == 100) & (raw_df.factors == 64)]\n",
     "for i, k in enumerate(df[parameter]):\n",
     "    plt.scatter([k] * 5, df[[f'Fold {i}' for i in range(5)]].iloc[i])\n",
     "\n",
@@ -122,18 +135,21 @@
     "parameter = \"iterations\"\n",
     "alpha = 1\n",
     "fac = 64\n",
-    "df = raw_df[(raw_df.regularization==1) & (raw_df.factors==fac) & (raw_df.alpha==alpha)].sort_values(by=parameter)\n",
+    "df = raw_df[(raw_df.regularization == 1) & (raw_df.factors == fac) & (raw_df.alpha == alpha)].sort_values(by=parameter)\n",
     "plt.plot(df[parameter], df['mean'], label=r\"$\\lambda=1$\")\n",
-    "df = raw_df[(raw_df.regularization==0.1) & (raw_df.factors==fac) & (raw_df.alpha==alpha)].sort_values(by=parameter)\n",
+    "df = raw_df[(raw_df.regularization == 0.1) & (raw_df.factors == fac) & (raw_df.alpha == alpha)].sort_values(\n",
+    "    by=parameter)\n",
     "plt.plot(df[parameter], df['mean'], label=r\"$\\lambda=0.1$\")\n",
-    "df = raw_df[(raw_df.regularization==0.01) & (raw_df.factors==fac) & (raw_df.alpha==alpha)].sort_values(by=parameter)\n",
+    "df = raw_df[(raw_df.regularization == 0.01) & (raw_df.factors == fac) & (raw_df.alpha == alpha)].sort_values(\n",
+    "    by=parameter)\n",
     "plt.plot(df[parameter], df['mean'], label=r\"$\\lambda=0.01$\")\n",
-    "df = raw_df[(raw_df.regularization==0.001) & (raw_df.factors==fac) & (raw_df.alpha==alpha)].sort_values(by=parameter)\n",
+    "df = raw_df[(raw_df.regularization == 0.001) & (raw_df.factors == fac) & (raw_df.alpha == alpha)].sort_values(\n",
+    "    by=parameter)\n",
     "plt.plot(df[parameter], df['mean'], label=r\"$\\lambda=0.001$\")\n",
     "plt.legend()\n",
     "plt.xlabel(parameter)\n",
     "plt.ylabel(f'Cross-validation {metric}')\n",
-    "plt.xticks(range(10,101,10))\n",
+    "plt.xticks(range(10, 101, 10))\n",
     "plt.savefig(f\"plots/cv_{parameter}_lambda.png\", dpi=400)"
    ],
    "metadata": {
